# bodilyinfection

./: BodilyInfection.sln  BodilyInfection110921.vsps  BodilyInfectionEngineClassDependencies.dgml  Check-in.txt  Code Analysis.txt  Feature List.xls  Feature List.xlsx  ProjectHome.md
Art/: Virus.xml  spritesheet.xcf
Art/GameOver/: gameover.xcf
Art/StageClear/: stageclear.xcf
Art/antibody/: sprite.png.spsh
Art/heart/: HEART.blend
Art/rbc/: rbc.blend
Art/ship/: ship.blend  ship.blend1  ship.blend2  ship_compass.blend  ship_compass.blend1
Art/start/: Start.avi.sfl  Start.wmv  background.xcf  start_screen.blend
Art/stomach/: estomago.blend
Art/virus/: virusPulse.anim
BodilyInfection/: Doxyfile
BodilyInfection/BodilyInfection/: Animation.cs  Background.cs  BodilyInfection.cs  BodilyInfection.csproj  BodilyInfection.csproj.Debug.cachefile  Bullet.cs  Game.cs  Game1.cs  Level.cs  LevelFunctions.cs  LoadResources.cs  Program.cs  Readme.txt  RedBloodCell.cs  Ship.cs  Sprite.cs  SpriteFrame.cs  Virus.cs  WorldObject.cs
IvanGame/: Animation.cpp  Animation.h  Background.cpp  Collision.cpp  Frame.h  Level.cpp  LevelFns.h  Sprite.h  Text.h  WorldObject.cpp  WorldObject.h  fns.cpp  game.vcxproj  main.cpp
trunk/: BodilyInfection.psess  Check-in.txt  Feature List.xls  Feature List.xlsx
trunk/IvanGame/: Actor.cpp  Actor.h  Animation.cpp  Animation.h  Background.h  Behaviors.h  CMakeLists.txt  Collision.h  Doxyfile  Game.cpp  Game.h  Level.h  LoadResources.cpp  Sprite.cpp  Text.cpp  fns.h
trunk/IvanGame/ArtAssets/Sprites/: NewAnimation.anim
(+207 files in other folders)
